# pptree

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  DESCRIPTION  Dockerfile  LICENSE  Makefile  NAMESPACE  README.md  conanfile.txt  configure  docker-compose.yml  preformance_timesWT.Rdata  requirements-dev.txt  speed_perf.R  uncrustify.cfg
.github/: CODEOWNERS  dependabot.yml
R/: PPForest.R  PPTree.R  RcppExports.R  util.R
bench/: default-scenarios-classification.json  default-scenarios-regression.json  default-scenarios.json
core/: CMakeLists.txt  Dependencies.cmake  main.cpp
core/include/: ppforest2.hpp  pptree.hpp  pptreeio.hpp
core/src/: BootstrapDataSpec.hpp  BootstrapDataSpec.test.cpp  BootstrapTree.cpp  BootstrapTree.hpp  BootstrapTree.test.cpp  CLI.cpp  CLI.integration.test.cpp  CLIOptions.hpp  CLIOptions.test.cpp  Color.hpp  ConfusionMatrix.cpp  ConfusionMatrix.hpp  ConfusionMatrix.test.cpp  DMatrix.cpp  DMatrix.hpp  DMatrix.test.cpp  DRNoopStrategy.hpp  DRStrategy.cpp  DRStrategy.hpp  DRUniformStrategy.hpp  DVector.hpp  DVector.test.cpp  Data.hpp  Data.test.cpp  DataColumn.hpp  DataColumn.test.cpp  DataPacket.hpp  DataSpec.hpp  DataSpec.test.cpp  EigenInit.test.cpp  Error.hpp  Forest.cpp  Forest.hpp  Forest.test.cpp  Group.cpp  Group.hpp  Group.test.cpp  GroupPartition.cpp  GroupPartition.hpp  GroupPartition.test.cpp  (+69 more)
core/src/cli/: Benchmark.cpp  Benchmark.hpp  Benchmark.integration.test.cpp  Benchmark.test.cpp  BenchmarkParams.hpp  BenchmarkReport.cpp  BenchmarkReport.hpp  BenchmarkReport.test.cpp  CLI.cpp  CLI.integration.hpp  CLI.integration.test.cpp  CLIOptions.cpp  CLIOptions.hpp  CLIOptions.test.cpp  CMakeLists.txt  Color.hpp  Evaluate.cpp  Evaluate.hpp  Evaluate.integration.test.cpp  EvaluateParams.cpp  EvaluateParams.hpp  EvaluateParams.test.cpp  JsonApply.hpp  Metrics.cpp  Metrics.hpp  ModelParams.cpp  ModelParams.hpp  ModelParams.test.cpp  Predict.cpp  Predict.hpp  Predict.integration.test.cpp  Presentation.hpp  Reproducibility.integration.test.cpp  Summarize.cpp  Summarize.hpp  Summarize.integration.test.cpp  Train.cpp  Train.hpp  Train.integration.test.cpp  Validation.cpp  (+5 more)
core/src/golden/: GoldenGen.cpp  Reproducibility.test.cpp  Threading.test.cpp
core/src/io/: CMakeLists.txt  Color.hpp  EvaluateResult.cpp  EvaluateResult.hpp  IO.cpp  IO.hpp  IO.test.cpp  Output.hpp  Presentation.cpp  Presentation.hpp  Presentation.test.cpp  Table.hpp  TempFile.hpp  Timing.hpp
core/src/models/: Bagged.hpp  BootstrapTree.cpp  BootstrapTree.hpp  CMakeLists.txt  ClassificationForest.cpp  ClassificationForest.hpp  ClassificationForest.test.cpp  ClassificationTree.cpp  ClassificationTree.hpp  ClassificationTree.test.cpp  DRNoopStrategy.cpp  DRNoopStrategy.hpp  DRNoopStrategy.test.cpp  DRStrategy.hpp  DRUniformStrategy.cpp  DRUniformStrategy.hpp  DRUniformStrategy.test.cpp  Forest.cpp  Forest.hpp  Forest.test.cpp  Model.cpp  Model.hpp  ModelVisitor.hpp  PPGLDAStrategy.cpp  PPGLDAStrategy.hpp  PPPDAStrategy.cpp  PPPDAStrategy.hpp  PPPDAStrategy.test.cpp  PPStrategy.hpp  PPStrategy.test.cpp  Projector.cpp  Projector.hpp  Regression.test.cpp  RegressionForest.cpp  RegressionForest.hpp  RegressionForest.test.cpp  RegressionTree.cpp  RegressionTree.hpp  RegressionTree.test.cpp  SRMeanOfMeansStrategy.cpp  (+35 more)
core/src/models/strategies/: CMakeLists.txt  NodeContext.hpp  Strategy.hpp
core/src/models/strategies/binarize/: Binarization.cpp  Binarization.hpp  Disabled.cpp  Disabled.hpp  LargestGap.cpp  LargestGap.hpp  LargestGap.test.cpp
core/src/models/strategies/cutpoint/: Cutpoint.cpp  Cutpoint.hpp  MeanOfMeans.cpp  MeanOfMeans.hpp  MeanOfMeans.test.cpp  SplitCutpoint.hpp
core/src/models/strategies/grouping/: ByCutpoint.cpp  ByCutpoint.hpp  ByCutpoint.test.cpp  ByLabel.cpp  ByLabel.hpp  ByLabel.test.cpp  Grouping.cpp  Grouping.hpp
core/src/models/strategies/leaf/: LeafStrategy.hpp  MajorityVote.cpp  MajorityVote.hpp  MajorityVote.test.cpp  MeanResponse.cpp  MeanResponse.hpp  MeanResponse.test.cpp
core/src/models/strategies/partition/: ByGroup.cpp  ByGroup.hpp  ByGroup.test.cpp  StepPartition.hpp
core/src/models/strategies/pp/: PDA.cpp  PDA.hpp  PDA.test.cpp  ProjectionPursuit.cpp  ProjectionPursuit.hpp
core/src/models/strategies/stop/: CompositeStop.cpp  CompositeStop.hpp  CompositeStop.test.cpp  MaxDepth.cpp  MaxDepth.hpp  MaxDepth.test.cpp  MinSize.cpp  MinSize.hpp  MinSize.test.cpp  MinVariance.cpp  MinVariance.hpp  MinVariance.test.cpp  PureNode.cpp  PureNode.hpp  PureNode.test.cpp  StopRule.hpp
core/src/models/strategies/vars/: All.cpp  All.hpp  All.test.cpp  Uniform.cpp  Uniform.hpp  Uniform.test.cpp  VariableSelection.cpp  VariableSelection.hpp
core/src/serialization/: CMakeLists.txt  ExportValidation.cpp  ExportValidation.hpp  ExportValidation.test.cpp  Json.cpp  Json.hpp  Json.test.cpp  JsonOptional.hpp
core/src/stats/: CMakeLists.txt  ConfusionMatrix.cpp  ConfusionMatrix.hpp  ConfusionMatrix.test.cpp  DataPacket.hpp  GroupPartition.cpp  GroupPartition.hpp  GroupPartition.test.cpp  Normal.cpp  Normal.hpp  Normal.test.cpp  RegressionMetrics.cpp  RegressionMetrics.hpp  RegressionMetrics.test.cpp  Simulation.cpp  Simulation.hpp  Simulation.test.cpp  Stats.cpp  Stats.hpp  Stats.test.cpp  Uniform.cpp  Uniform.hpp  Uniform.test.cpp
core/src/utils/: CMakeLists.txt  Invariant.cpp  Invariant.hpp  Invariant.test.cpp  JsonReader.cpp  JsonReader.hpp  JsonReader.test.cpp  JsonValidation.hpp  Let me see what's actually unstaged:.md  Macros.hpp  Map.hpp  Math.hpp  Math.test.cpp  System.cpp  System.hpp  System.test.cpp  Types.hpp  UserError.cpp  UserError.hpp
core/test/: linalg.test.cpp  linear_algebra.test.cpp  pp.test.R  pp.test.cpp  pptree.test.cpp  stat.test.cpp  stats.test.R  stats.test.cpp
data/: NCI60.rda  crab.csv  crabs.rda  fishcatch.rda  glass.csv  glass.rda  iris.rda  leukemia.csv  lymphoma.csv  lymphoma.rda  parkinson.rda  wine.rda
docs/: Doxyfile  _pkgdown.yml  index.html  redirect.html
fixtures/: model.json
man/: PPForest.Rd  PPTree.Rd  crabs.Rd  fishcatch.Rd  formula.PPForest.Rd  (+11 more)
(+2590 files in other folders)
